update project structure from single project to multi module.add design pattern demo.

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>com.xjh</groupId>
     <artifactId>ProgramLearn</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -19,6 +20,11 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+        <module>designpattern</module>
+        <module>leetcode</module>
+        <module>java</module>
+    </modules>
 
 
 </project>
